--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -20,7 +20,6 @@ button {
     border-radius: 8px;
     background-color: #FFF;
     border-color: #FFF;
-
     font-size: 14px;
     font-weight: 700;
 }
@@ -34,5 +33,6 @@ select {
     border-color: #FFF;
     background: url("~@/assets/arrow-down.svg") no-repeat #FFF;
     background-position: 90% 50%;
+    font-size: 14px;    
 }
 
