--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,37 +2,54 @@
 @import 'variables';
 @import 'mixins';
 @import 'components';
+@import 'card';
 
 body {
     background: #FFF;
 }
 
 header {
-    @include flex-center(column);
-    gap: 22px;
-    background-color: $color-purple;
-    min-height: 160px;
-    height: 25vw;
-    max-height: 381px;
-    width: 100%;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
-
-    h1 {
-        font-size: 36px;
-        font-weight: 800;
-        color: #FFF;
+    .hero {
+        @include flex-center(column);
+        gap: 22px;
+        background-color: $color-purple;
+        min-height: 160px;
+        height: 25vw;
+        max-height: 381px;
+        width: 100%;
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
+    
+        h1 {
+            font-size: 36px;
+            font-weight: 800;
+            color: #FFF;
+        }
+    
+        h2 {
+            font-size: 18px;
+            font-weight: 400;
+            color: #FFF;
+        }
     }
 
-    h2 {
-        font-size: 18px;
-        font-weight: 400;
-        color: #FFF;
+    .hero-mobile {
+        display: none;
+        padding: 0 8px;
+        margin-top: 20px;
+        text-align: center;
+
+        h2 {
+            font-size: 16px;
+            font-weight: 400;
+            color: $color-purple
+        }
     }
 }
 
 main {
     max-width: $max-width;
     margin: 56px auto 48px;
+    padding: 0 8px;
 }
 
 .filters {
@@ -42,6 +59,7 @@ main {
     background-color: $color-green;
     padding: 25px;
     border-radius: 8px;
+    gap: 18px;
 
     .search {
         flex: 1;
@@ -77,6 +95,20 @@ main {
             font-size: 14px;
             color: #FFF;
         }
+
+        select {
+            appearance: unset;
+            height: 34px;
+            max-width: 193px;
+            min-width: 147px;
+            width: 100%;
+            padding-left: 29px;
+            border-radius: 8px;
+            border-color: #FFF;
+            background: url("~@/assets/arrow-down.svg") no-repeat #FFF;
+            background-position: 90% 50%;
+            font-size: 14px;    
+        }
     }
 }
 
@@ -104,6 +136,7 @@ main {
     form {
         @include flex-center;
         justify-content: space-between;
+        flex-wrap: wrap;
         gap: 13px;
 
 
@@ -156,5 +189,46 @@ footer {
         font-size: 12px;
         font-weight: 400;
         color: #FFF;
+    }
+}
+
+@media (max-width: 875px) {
+    header {
+        .hero {
+            h1 {
+                font-size: 24px;
+                padding: 0 8px;
+            }
+
+            h2 {
+                display: none;
+            }
+        }
+
+        .hero-mobile {
+            display: block;
+        }
+    }
+
+    .filters {
+        padding: 30px 17px;
+
+        .order-by {
+            justify-content: space-between;
+            gap: 5px;
+        }
+    }
+
+    .newsletter {
+        padding: 30px 17px;
+    }
+
+    .about {
+        flex-direction: column;
+        gap: 35px;
+
+        .about__text {
+            text-align: center;
+        }
     }
 }
