--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
 *, 
 *::after, 
@@ -7,4 +8,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
+}
+
+a {
+    text-decoration: unset;
 }
