--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -64,27 +64,27 @@
         font-weight: 400;
     }
 
-    .content .view {
-        display: none;
-    }
-
     .view {
-        position: absolute;
-        left: 35px;
-        right: 35px;
-        top: 126px;
-        @include flex-center;
+        display: none;
         background: $color-green;
-        height: 36px;
         border-radius: 5px;
         font-family: 'Roboto', sans-serif;
         font-size: 12px;
         color: #FFF;
         text-transform: uppercase;
         cursor: pointer;
-        transform: translateY(5px);
-        opacity: 0;
-        transition: all ease-in .2s;
+
+        &.overlay {
+            position: absolute;
+            left: 35px;
+            right: 35px;
+            top: 126px;
+            @include flex-center;
+            height: 36px;
+            transform: translateY(5px);
+            opacity: 0;
+            transition: all ease-in .2s;
+        }
     }
 
     &.unavailable {
@@ -102,6 +102,47 @@
         .view {
             opacity: 1;
             transform: translateY(0);
+        }
+    }
+
+    @media (max-width: $phone) {
+        .info {
+            flex-direction: row;
+            padding: 20px;
+            gap: 5px;
+        }
+
+        .thumbnail {
+            width: 50%;
+            height: 145px;
+        }
+
+        .content {
+            width: 50%;
+        }
+
+        .name {
+            font-size: 12px;
+            height: 35px;
+        }
+
+        .prices {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .price {
+            font-size: 16px;
+        }
+
+        .view {
+            @include flex-center;
+            height: 28px;
+            margin-top: 8px;
+
+            &.overlay {
+                display: none;
+            }
         }
     }
 }
