--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -8,6 +8,7 @@
     .info {
         display: flex;
         flex-direction: column;
+        position: relative;
         padding: 18px;
         border: 1px solid rgba(0, 0, 0, 0.15);
         border-radius: 14px;
@@ -22,6 +23,36 @@
             max-width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+    }
+
+    .flags {
+        position: absolute;
+        top: 18px;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5px;
+        
+        .flag {
+            @include flex-center;
+            border-radius: 0px 8px 8px 0px;
+            height: 30px;
+            font-size: 12px;
+            color: #FFF;
+            
+
+            &.discount {
+                padding: 0 8px;
+                background: $color-green;
+                font-weight: 700;
+            }
+
+            &.free-shipping {
+                padding: 0 11px;
+                background: $color-purple;
+            }
         }
     }
 
@@ -87,6 +118,15 @@
         }
     }
 
+    .unavailable-message {
+        min-height: 46px;
+        @include flex-center;
+
+        p {
+            font-size: 13px;
+        }
+    }
+
     &.unavailable {
         .info {
             opacity: .5;
@@ -117,6 +157,10 @@
             height: 145px;
         }
 
+        .flags {
+            top: 20px;
+        }
+
         .content {
             width: 50%;
         }
@@ -124,6 +168,7 @@
         .name {
             font-size: 12px;
             height: 35px;
+            margin-bottom: 6px;
         }
 
         .prices {
@@ -133,6 +178,17 @@
 
         .price {
             font-size: 16px;
+        }
+
+        .oldPrice-container {
+            min-height: 22px;
+        }
+
+        .unavailable-message {
+            padding: 10px 0 0;
+            min-height: 107px;
+            justify-content: flex-start;
+            align-items: flex-start;
         }
 
         .view {
